[gd_scene load_steps=4 format=3 uid="uid://b2ajorl26275p"]

[ext_resource type="Script" path="res://GUI/pause_menu.gd" id="1_uwnx4"]
[ext_resource type="AudioStream" uid="uid://dx2kjuwdmuji3" path="res://GUI/click.mp3" id="2_l7pkj"]

[sub_resource type="LabelSettings" id="LabelSettings_a7kqo"]
font_size = 64

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uwnx4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.498039)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 121.0
grow_horizontal = 2
theme_override_constants/margin_top = 30

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_a7kqo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -174.0
offset_right = 179.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PlayButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Play"

[node name="MenuButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Quit
"

[node name="ButtonTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ClickSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_l7pkj")

[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
